# GDL

./: .gitignore  README.md  pyproject.toml
plots/: plotting_citeseer.json  plotting_cora.json  plotting_pubmed.json
src/: plotting.py  utils.py
src/graph-transformer/: evaluation.py  plotting.py  run_full_attention.py  run_linformer.py  run_performer.py  train.py  utils.py
src/graph-transformer/models/: full_attention.py  linformer_attention.py  performer_attention.py
